--- a/css/header_footer.css
+++ b/css/header_footer.css
@@ -118,7 +118,11 @@ header {
   justify-content: center;
 }
 
-.menu a {
+.menu li {
+  list-style: none;
+}
+
+.menu li a {
   color: #fff;
   text-decoration: none;
   display: block;
